<resources>
    <string name="app_name">My places</string>

    <!-- Bottom Navigation   -->
    <string name="bottom_navigation_bookmark">Bookmark</string>
    <string name="bottom_navigation_history">History</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_explore">Explore</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="place_card_title">NYC Central Park</string>
    <string name="place_card_description">A large park in the center of New York</string>

    <!-- Exceptions -->
    <string name="exception_something_bag_happened">Something bad happen</string>
    <string name="exception_internet_connection">You have problem with network connection</string>
    <string name="exception_unknown_api_response">Some problem with server side response</string>
    <string name="exception_client_side_error">Some problems on client side</string>
    <string name="exception_server_side_error">Some problems on server side</string>
    <string name="exception_facebook_auth_failed">Facebook authentication failed</string>
    <string name="exception_google_auth_failed">Google authentication failed</string>
    <string name="exception_no_access">No access</string>
    <string name="exception_token_is_required">Token is required</string>
    <string name="exception_parsing_response_error">Parsing API response failed</string>

    <!-- Scrolling -->
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="small_place_image_descr">Small place image</string>
    <string name="place_type_and_is_open">TextView</string>
    <string name="place_type_and_is_open_descr">Short place info</string>
    <string name="place_name_header">TextView</string>
    <string name="place_name_header_descr">Place name</string>
    <string name="place_photo_header">Place Header</string>
    <string name="place_type_chip_str">chip value</string>
    <string name="choose_theme_text">Select theme</string>
    <string name="disable_dark_mode_text">Disable dark mode</string>


</resources>