<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bookmarksFragment"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bottom_navigation_bookmark"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/historyFragment"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/bottom_navigation_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_navigation_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/exploreFragment"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/bottom_navigation_explore"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/bottom_navigation_settings"
        app:showAsAction="ifRoom" />

</menu>